--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.2",
     "expo": "~50.0.19",
+    "expo-auth-session": "~5.4.0",
     "expo-av": "~13.10.6",
     "expo-camera": "~14.1.3",
     "expo-device": "~5.9.4",
@@ -26,10 +27,12 @@
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "^12.7.2",
     "expo-media-library": "~15.9.2",
+    "expo-random": "~13.6.0",
     "expo-router": "~3.4.10",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "expo-video-thumbnails": "^7.9.0",
+    "expo-web-browser": "~12.8.2",
     "firebase": "^10.9.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
