Initialized eas project for the app

--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
         "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#0E0E0E"
       },
-      "package": "com.zeeshan_raza.infotik",
+      "package": "com.infotik.infotik_",
       "permissions": [
         "android.permission.RECORD_AUDIO",
         "android.permission.CAMERA"
@@ -46,12 +46,12 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "1d66f46c-940e-4d69-a257-4f967c66c36f"
+        "projectId": "21508d4e-ab26-44f3-9e89-282010386762"
       },
       "router": {
         "origin": false
       }
     },
-    "owner": "jaggaho566"
+    "owner": "infotik"
   }
 }
