--- a/eas.json
+++ b/eas.json
@@ -6,7 +6,8 @@
   "build": {
     "apk": {
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "distribution": "internal"
       }
     },
     "aab": {
