Added Proguard checks for deobfuscation, Edited Splash Image & Scroller screen elements.

--- a/eas.json
+++ b/eas.json
@@ -24,7 +24,9 @@
     "production": {
       "android": {
         "buildType": "app-bundle",
-        "autoIncrement": true
+        "autoIncrement": true,
+        "proguard": true,
+        "enableProguardInReleaseBuilds": true
       }
     }
   },
