Changed description lines, Changed Chat Color, Removed proguard configs, Updated app version.

--- a/eas.json
+++ b/eas.json
@@ -24,9 +24,7 @@
     "production": {
       "android": {
         "buildType": "app-bundle",
-        "autoIncrement": true,
-        "proguard": true,
-        "enableProguardInReleaseBuilds": true
+        "autoIncrement": true
       }
     }
   },
