--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/config-plugins": "^7.8.0",
+    "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-async-storage/async-storage": "1.21.0",
@@ -36,6 +37,7 @@
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.9.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-gifted-chat": "^2.4.0",
@@ -43,9 +45,11 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-video": "^6.0.0-beta.6",
     "react-native-video-scroll": "^1.0.2",
+    "react-native-web": "~0.19.6",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "throttle-debounce": "^5.0.0",
